[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Normie.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.211765, 0.572549, 0.0588235, 1 )

[sub_resource type="CubeMesh" id=2]
material = SubResource( 3 )
size = Vector3( 60, 2, 60 )

[sub_resource type="BoxShape" id=1]
extents = Vector3( 30, 1, 30 )

[sub_resource type="Curve3D" id=4]
_data = {
"points": PoolVector3Array( 0, 0, 0, 0, 0, 0, -29.7626, 0, -29.7626, 0, 0, 0, 0, 0, 0, 29.97, 0, -29.7626, 0, 0, 0, 0, 0, 0, 29.8663, 0, 29.6589, 0, 0, 0, 0, 0, 0, -29.8663, 0, 29.97, 0, 0, 0, 0, 0, 0, -29.7626, 0, -29.7626 ),
"tilts": PoolRealArray( 0, 0, 0, 0, 0 )
}

[node name="Main" type="Node"]
script = ExtResource( 3 )
enemy_scene = ExtResource( 2 )

[node name="Ground" type="StaticBody" parent="."]
collision_mask = 0

[node name="MeshInstance" type="MeshInstance" parent="Ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
mesh = SubResource( 2 )
skeleton = NodePath("")

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
shape = SubResource( 1 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.276342, -4.20092e-08, 0.961059, -0.961059, -1.20793e-08, 0.276342, 0, -1, -4.37114e-08, 0, 114.503, 0 )
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="EnemySpawnPath" type="Path" parent="."]
curve = SubResource( 4 )

[node name="EnemySpawnLocation" type="PathFollow" parent="EnemySpawnPath"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -29.7626, 0, -29.7626 )

[connection signal="dead" from="Player" to="." method="_on_Player_dead"]
[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_EnemySpawnTimer_timeout"]
